--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -22,7 +22,7 @@ html {
     min-width: (320em/16);
     border: 16em/16 solid $button-border;
     .screen {
-        flex: 1 0 2rem;
+        flex: 1 0 6rem;
         display: flex;
         flex-flow: column-reverse nowrap;
         overflow: hidden;
@@ -30,24 +30,34 @@ html {
         background-color: $button-color;
         .history {
             display: flex;
-            flex-flow: row nowrap;
+            flex-flow: column-reverse nowrap;
             justify-content: space-between;
             align-items: center;
+            overflow: hidden;
             padding: (6rem/16) (3rem/16);
             color: darken(whitesmoke, 20%);
-            span {
-                display: inline-block;
-            }
-            span.left {
-                text-align: left;
-                width: 50%;
-                overflow: hidden;
-            }
-            span.right {
-                width: 40%;
-                overflow: hidden;
+            .hist-elem {
+                flex: 0 0;
+                border-top: 1px solid darken($button-color, 3%);
+                width: 100%;
                 display: flex;
                 justify-content: space-between;
+                padding: (6rem/16) 0;
+                span.left {
+                    display: inline-block;
+                    text-align: left;
+                    width: 50%;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                }
+                span.right {
+                    display: inline-block;
+                    width: 40%;
+                    overflow: hidden;
+                    display: flex;
+                    justify-content: space-between;
+                    text-overflow: ellipsis;
+                }
             }
         }
         .input-area {
@@ -55,11 +65,14 @@ html {
             border-top: (1rem/16) solid $button-border;
             padding: (3rem/16);
             #active {
-                width: 100%;
                 height: (9rem/16)+1.1rem;
                 padding: (6rem/16) 0 (3rem/16);
+                width: 100%;
+                font: inherit;
                 font-size: 1.1rem;
-                overflow: hidden;
+                color: inherit;
+                background: transparent;
+                border: 0;
             }
             #warn {
                 width: 100%;
@@ -103,7 +116,7 @@ html {
         button:hover {
             background: linear-gradient(lighten($button-color, 3%), darken($button-color, 2%));
         }
-        button.active {
+        button:active, button.active{
             background: linear-gradient(darken($button-color, 10%), darken($button-color, 5%));
         }
         #one {grid-area:one;} 
@@ -136,7 +149,7 @@ html {
         #equals:hover {
             background: linear-gradient(lighten($equals-color, 5%), darken($equals-color, 5%));
         }
-        #equals:active {
+        #equals:active, #equals.active {
             background: linear-gradient(darken($equals-color, 10%), darken($equals-color, 5%));
         }
     }
