--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ html {
           flex: 0 0;
   border-top: 1px solid #2f2f2f;
   width: 100%;
+  height: 1.75rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -85,21 +86,32 @@ html {
   display: inline-block;
   text-align: left;
   width: 50%;
+  height: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .calc-body .screen .history .hist-elem span.right {
   display: inline-block;
   width: 40%;
-  overflow: hidden;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  position: relative;
+  height: 100%;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
   text-overflow: ellipsis;
+  text-align: right;
+  overflow: hidden;
+  padding-left: 1rem;
+  white-space: nowrap;
+}
+
+.calc-body .screen .history .hist-elem span.right::before {
+  content: "=";
+  position: absolute;
+  left: 0;
+  margin-right: 1em;
 }
 
 .calc-body .screen .input-area {
