--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -40,6 +40,7 @@ html {
                 flex: 0 0;
                 border-top: 1px solid darken($button-color, 3%);
                 width: 100%;
+                height: (12rem/16)+1rem;
                 display: flex;
                 justify-content: space-between;
                 padding: (6rem/16) 0;
@@ -47,16 +48,28 @@ html {
                     display: inline-block;
                     text-align: left;
                     width: 50%;
+                    height: 100%;
                     overflow: hidden;
                     text-overflow: ellipsis;
+                    white-space: nowrap;
                 }
                 span.right {
                     display: inline-block;
                     width: 40%;
-                    overflow: hidden;
-                    display: flex;
+                    position: relative;
+                    height: 100%;
                     justify-content: space-between;
                     text-overflow: ellipsis;
+                    text-align: right;
+                    overflow: hidden;
+                    padding-left: 1rem;
+                    white-space: nowrap;
+                }
+                span.right::before {
+                    content: "=";
+                    position: absolute;
+                    left: 0;
+                    margin-right: 1em;
                 }
             }
         }
